--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,9 @@ android:
   components:
     - build-tools-28.0.0
     - android-28
-    -
+    - add-on
+    - extra
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
